# rust

./: .gitignore  .rustfmt.toml  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: cd_crates.yaml  rust.yaml  unittest.yaml
assets/: continent.json  countries.json  currency.json  eu.json  flags.json
examples/: get_map.rs  lookup.rs  lookup_batch.rs  lookup_lite.rs
scripts/: fmt.sh
src/: api.rs  bogon.rs  data.rs  error.rs  ipinfo.rs  ipinfo_core.rs  ipinfo_lite.rs  ipinfo_plus.rs  lib.rs  util.rs
