[package]
name = "ipinfo"
description = "ipinfo: A Rust library for IPInfo"
version = "1.0.0"
authors = ["Amr Ali <amralicc@gmail.com>", "Uman Shahzad <uman@mslm.io>", "Umar Farooq <mail.umar.now@gmail.com>", "Fayzan Ahmad <fayzanx@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/ipinfo/rust/"
readme = "README.md"
categories = ["network-programming"]
keywords = ["ip", "geolocation", "ipinfo", "ip-address"]
exclude = [".gitignore", ".travis.yml", ".cargo/config"]

[badges]
travis-ci = { repository = "ipinfo/rust", branch = "master" }
codecov = { repository = "ipinfo/rust", branch = "master", service = "github" }

[dependencies]
reqwest = "0.9"
lru = "0.6"
serde = "1.0"
serde_json = "1.0"
include_dir = "0.7.3"

[profile.release]
overflow-checks = true
lto = true
