[package]
name = "ipinfo"
description = "ipinfo: A Rust library for IPInfo"
version = "3.0.0"
authors = [
    "Amr Ali <amralicc@gmail.com>",
    "Uman Shahzad <uman@mslm.io>",
    "Umar Farooq <mail.umar.now@gmail.com>",
    "Fayzan Ahmad <fayzanx@gmail.com>",
]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/ipinfo/rust/"
readme = "README.md"
categories = ["network-programming"]
keywords = ["ip", "geolocation", "ipinfo", "ip-address"]
exclude = [".gitignore", ".travis.yml", ".cargo/config"]

[badges]
travis-ci = { repository = "ipinfo/rust", branch = "master" }
codecov = { repository = "ipinfo/rust", branch = "master", service = "github" }

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
lru = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
include_dir = "0.7.3"
ipnetwork = "0.20.0"
tokio = { version = "1", features = ["macros", "time"] }
lazy_static = "1.4"

[profile.release]
overflow-checks = true
lto = true
