[package]
name = "ipinfo"
description = "ipinfo: A Rust library for IPInfo"
version = "3.0.1"
authors = [
    "Amr Ali <amralicc@gmail.com>",
    "Uman Shahzad <uman@mslm.io>",
    "Umar Farooq <mail.umar.now@gmail.com>",
    "Fayzan Ahmad <fayzanx@gmail.com>",
    "IPinfo Releases <releases@ipinfo.io>",
]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/ipinfo/rust/"
readme = "README.md"
categories = ["network-programming"]
keywords = ["ip", "geolocation", "ipinfo", "ip-address"]
exclude = [".gitignore", ".travis.yml", ".cargo/config"]

[badges]
travis-ci = { repository = "ipinfo/rust", branch = "master" }
codecov = { repository = "ipinfo/rust", branch = "master", service = "github" }

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
lru = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ipnetwork = "0.20.0"
tokio = { version = "1", features = ["time"] }
lazy_static = "1.4"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
overflow-checks = true
lto = true
